--- a/portfolio.html
+++ b/portfolio.html
@@ -120,12 +120,38 @@
             <li class="product-list__item">
               <a href="" class="product-list__link">
                 <div class="product-list__box-up">
-                  <img
-                    src="./images/imgP1-min.jpg"
-                    alt="фотографія веб-сайта"
-                    width="370"
-                    class="product-list__img"
-                  />
+                  <!-- ================================================  -->
+                  <picture class="product-list__img">
+                    <source
+                      srcset="
+                        ./images/desktop/prod1-desktop-img.jpg    1x,
+                        ./images/desktop/prod1-desktop-img-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <sourc4
+                      srcset="
+                    ./images/tablet/prod1-tab-img.jpg    1x,
+                    ./images/tablet/prod1-tab-img@2x.jpg 2x
+                  "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/mobile/prod1-mob-img.jpg    1x,
+                        ./images/mobile/prod1-mob-img@2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/mobile/prod1-mob-img.jpg"
+                      alt="фотографія веб-сайта"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
+                  <!-- ================================================  -->
+
                   <p class="product-list__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -141,12 +167,38 @@
             <li class="product-list__item">
               <a href="" class="product-list__link">
                 <div class="product-list__box-up">
-                  <img
-                    src="./images/imgP2-min.jpg"
-                    alt="фотографія дизайна"
-                    width="370"
-                    class="product-list__img"
-                  />
+                  <!-- ================================================  -->
+                  <picture class="product-list__img">
+                    <source
+                      srcset="
+                        ./images/desktop/prod2-desktop-img.jpg    1x,
+                        ./images/desktop/pro21-desktop-img-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <sourc4
+                      srcset="
+                    ./images/tablet/prod2-tab-img.jpg    1x,
+                    ./images/tablet/prod2-tab-img@2x.jpg 2x
+                  "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/mobile/prod2-mob-img.jpg    1x,
+                        ./images/mobile/prod2-mob-img@2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/mobile/prod2-mob-img.jpg"
+                      alt="фотографія дизайна"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
+                  <!-- ================================================  -->
+
                   <p class="product-list__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -164,12 +216,38 @@
             <li class="product-list__item">
               <a href="" class="product-list__link">
                 <div class="product-list__box-up">
-                  <img
-                    src="./images/imgP3-min.jpg"
-                    alt="фотографія Додатка"
-                    width="370"
-                    class="product-list__img"
-                  />
+                  <!-- ================================================  -->
+                  <picture class="product-list__img">
+                    <source
+                      srcset="
+                        ./images/desktop/prod3-desktop-img.jpg    1x,
+                        ./images/desktop/prod3-desktop-img-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <sourc4
+                      srcset="
+                    ./images/tablet/prod3-tab-img.jpg    1x,
+                    ./images/tablet/prod3-tab-img@2x.jpg 2x
+                  "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/mobile/prod3-mob-img.jpg    1x,
+                        ./images/mobile/prod3-mob-img@2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/mobile/prod3-mob-img.jpg"
+                      alt="фотографія Додатка"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
+                  <!-- ================================================  -->
+
                   <p class="product-list__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -185,12 +263,38 @@
             <li class="product-list__item">
               <a href="" class="product-list__link">
                 <div class="product-list__box-up">
-                  <img
-                    src="./images/imgP4-min.jpg"
-                    alt="фотографія маркетинга"
-                    width="370"
-                    class="product-list__img"
-                  />
+                  <!-- ================================================  -->
+                  <picture class="product-list__img">
+                    <source
+                      srcset="
+                        ./images/desktop/prod4-desktop-img.jpg    1x,
+                        ./images/desktop/prod4-desktop-img-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <sourc4
+                      srcset="
+                    ./images/tablet/prod4-tab-img.jpg    1x,
+                    ./images/tablet/prod4-tab-img@2x.jpg 2x
+                  "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/mobile/prod4-mob-img.jpg    1x,
+                        ./images/mobile/prod4-mob-img@2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/mobile/prod4-mob-img.jpg"
+                      alt="фотографія маркетинга"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
+                  <!-- ================================================  -->
+
                   <p class="product-list__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -206,12 +310,38 @@
             <li class="product-list__item">
               <a href="" class="product-list__link">
                 <div class="product-list__box-up">
-                  <img
-                    src="./images/imgP5-min.jpg"
-                    alt="фотографія додатка 2"
-                    width="370"
-                    class="product-list__img"
-                  />
+                  <!-- ================================================  -->
+                  <picture class="product-list__img">
+                    <source
+                      srcset="
+                        ./images/desktop/prod5-desktop-img.jpg    1x,
+                        ./images/desktop/prod5-desktop-img-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <sourc4
+                      srcset="
+                    ./images/tablet/prod5-tab-img.jpg    1x,
+                    ./images/tablet/prod5-tab-img@2x.jpg 2x
+                  "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/mobile/prod5-mob-img.jpg    1x,
+                        ./images/mobile/prod5-mob-img@2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/mobile/prod5-mob-img.jpg"
+                      alt="фотографія додатка 2"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
+                  <!-- ================================================  -->
+
                   <p class="product-list__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -227,12 +357,38 @@
             <li class="product-list__item">
               <a href="" class="product-list__link">
                 <div class="product-list__box-up">
-                  <img
-                    src="./images/imgP6-min.jpg"
-                    alt="фотографія веб-сайта 2"
-                    width="370"
-                    class="product-list__img"
-                  />
+                  <!-- ================================================  -->
+                  <picture class="product-list__img">
+                    <source
+                      srcset="
+                        ./images/desktop/prod6-desktop-img.jpg    1x,
+                        ./images/desktop/prod6-desktop-img-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <sourc4
+                      srcset="
+                    ./images/tablet/prod6-tab-img.jpg    1x,
+                    ./images/tablet/prod6-tab-img@2x.jpg 2x
+                  "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/mobile/prod6-mob-img.jpg    1x,
+                        ./images/mobile/prod6-mob-img@2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/mobile/prod6-mob-img.jpg"
+                      alt="фотографія веб-сайта 2"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
+                  <!-- ================================================  -->
+
                   <p class="product-list__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -250,12 +406,38 @@
             <li class="product-list__item">
               <a href="" class="product-list__link">
                 <div class="product-list__box-up">
-                  <img
-                    src="./images/imgP7-min.jpg"
-                    alt="фотографія дизайна 2"
-                    width="370"
-                    class="product-list__img"
-                  />
+                  <!-- ================================================  -->
+                  <picture class="product-list__img">
+                    <source
+                      srcset="
+                        ./images/desktop/prod7-desktop-img.jpg    1x,
+                        ./images/desktop/prod7-desktop-img-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <sourc4
+                      srcset="
+                    ./images/tablet/prod7-tab-img.jpg    1x,
+                    ./images/tablet/prod7-tab-img@2x.jpg 2x
+                  "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/mobile/prod7-mob-img.jpg    1x,
+                        ./images/mobile/prod7-mob-img@2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/mobile/prod7-mob-img.jpg"
+                      alt="фотографія дизайна 2"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
+                  <!-- ================================================  -->
+
                   <p class="product-list__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -273,12 +455,38 @@
             <li class="product-list__item">
               <a href="" class="product-list__link">
                 <div class="product-list__box-up">
-                  <img
-                    src="./images/imgP8-min.jpg"
-                    alt="фотографія маркетинга 2"
-                    width="370"
-                    class="product-list__img"
-                  />
+                  <!-- ================================================  -->
+                  <picture class="product-list__img">
+                    <source
+                      srcset="
+                        ./images/desktop/prod8-desktop-img.jpg    1x,
+                        ./images/desktop/prod8-desktop-img-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <sourc4
+                      srcset="
+                    ./images/tablet/prod8-tab-img.jpg    1x,
+                    ./images/tablet/prod8-tab-img@2x.jpg 2x
+                  "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/mobile/prod8-mob-img.jpg    1x,
+                        ./images/mobile/prod8-mob-img@2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/mobile/prod8-mob-img.jpg"
+                      alt="фотографія маркетинга 2"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
+                  <!-- ================================================  -->
+
                   <p class="product-list__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -294,12 +502,38 @@
             <li class="product-list__item">
               <a href="" class="product-list__link">
                 <div class="product-list__box-up">
-                  <img
-                    src="./images/imgP9-min.jpg"
-                    alt="фотографія додатка 2"
-                    width="370"
-                    class="product-list__img"
-                  />
+                  <!-- ================================================  -->
+                  <picture class="product-list__img">
+                    <source
+                      srcset="
+                        ./images/desktop/prod9-desktop-img.jpg    1x,
+                        ./images/desktop/prod9-desktop-img-2x.jpg 2x
+                      "
+                      media="(min-width:1200px)"
+                    />
+                    <sourc4
+                      srcset="
+                    ./images/tablet/prod9-tab-img.jpg    1x,
+                    ./images/tablet/prod9-tab-img@2x.jpg 2x
+                  "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/mobile/prod9-mob-img.jpg    1x,
+                        ./images/mobile/prod9-mob-img@2x.jpg 2x
+                      "
+                      media="(max-width:767px)"
+                    />
+                    <img
+                      src="./images/mobile/prod9-mob-img.jpg"
+                      alt="фотографія додатка 2"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
+                  <!-- ================================================  -->
+
                   <p class="product-list__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
