--- a/index.html
+++ b/index.html
@@ -327,20 +327,20 @@
                   />
                   <source
                     srcset="
-                      ./images/desktop/f2-tablet-img.jpg    1x,
-                      ./images/desktop/f2-tablet-img@2x.jpg 2x
+                      ./images/desktop/f2-desktop-img.jpg    1x,
+                      ./images/desktop/f2-desktop-img@2x.jpg 2x
                     "
                     media="(min-width:768px)"
                   />
                   <source
                     srcset="
-                      ./images/desktop/f2-mobile-img.jpg    1x,
-                      ./images/desktop/f2-mobile-img@2x.jpg 2x
+                      ./images/desktop/f2-desktop-img.jpg    1x,
+                      ./images/desktop/f2-desktop-img@2x.jpg 2x
                     "
                     media="(max-width:767px)"
                   />
                   <img
-                    src="./images/desktop/f2-mobile-img.jpg"
+                    src="./images/desktop/f2-desktop-img.jpg"
                     alt="цвет"
                     width="378"
                     height="294"
@@ -423,8 +423,8 @@
                 <img
                   src="./images/mobile/inf1-mob-img.jpg "
                   alt="фотографія Ігор Дем'яненко"
-                  width="450"
-                  height="460"
+                  width="450px"
+                  height="460px"
                 />
               </picture>
               <!-- ================================================  -->
@@ -497,8 +497,8 @@
                 <img
                   src="./images/mobile/inf2-mob-img.jpg"
                   alt="фотографія Ольга Рєпіна"
-                  width="450"
-                  height="460"
+                  width="450px"
+                  height="460px"
                 />
               </picture>
               <!-- ================================================  -->
@@ -571,8 +571,8 @@
                 <img
                   src="./images/mobile/inf3-mob-img.jpg"
                   alt="фотографія Микола Тарасов"
-                  width="450"
-                  height="460"
+                  width="450px"
+                  height="460px"
                 />
               </picture>
               <!-- ================================================  -->
@@ -645,8 +645,8 @@
                 <img
                   src="./images/mobile/inf4-mob-img.jpg"
                   alt="фотографія Михайло Єрмаков"
-                  width="450"
-                  height="460"
+                  width="450px"
+                  height="460px"
                 />
               </picture>
               <!-- ================================================  -->
