--- a/index.html
+++ b/index.html
@@ -626,21 +626,21 @@
                     ./images/desktop/inf4-desktop-img.jpg    1x,
                     ./images/desktop/inf4-desktop-img-2x.jpg 2x
                   "
-                  media="(min-width:1200px)"
+                  media="screen and  (min-width:1200px)"
                 />
                 <sourc4
                   srcset="
                     ./images/tablet/inf4-tab-img.jpg    1x,
                     ./images/tablet/inf4-tab-img@2x.jpg 2x
                   "
-                  media="(min-width:768px)"
+                  media="screen and (min-width:768px)"
                 />
                 <source
                   srcset="
                     ./images/mobile/inf4-mob-img.jpg    1x,
                     ./images/mobile/inf4-mob-img@2x.jpg 2x
                   "
-                  media="(max-width:767px)"
+                  media="screen and (max-width:767px)"
                 />
                 <img
                   src="./images/mobile/inf4-mob-img.jpg"
