--- a/portfolio.html
+++ b/portfolio.html
@@ -125,9 +125,9 @@
                     <source
                       srcset="
                         ./images/desktop/prod1-desktop-img.jpg    1x,
-                        ./images/desktop/prod1-desktop-img-2x.jpg 2x
+                        ./images/desktop/prod1-desktop-img@2x.jpg 2x
                       "
-                      media="(min-width:1200px)"
+                      media="screen and (min-width:1200px)"
                     />
                     <sourc4
                       srcset="
@@ -172,7 +172,7 @@
                     <source
                       srcset="
                         ./images/desktop/prod2-desktop-img.jpg    1x,
-                        ./images/desktop/pro21-desktop-img-2x.jpg 2x
+                        ./images/desktop/prod2-desktop-img@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
                     />
@@ -221,7 +221,7 @@
                     <source
                       srcset="
                         ./images/desktop/prod3-desktop-img.jpg    1x,
-                        ./images/desktop/prod3-desktop-img-2x.jpg 2x
+                        ./images/desktop/prod3-desktop-img@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
                     />
@@ -268,7 +268,7 @@
                     <source
                       srcset="
                         ./images/desktop/prod4-desktop-img.jpg    1x,
-                        ./images/desktop/prod4-desktop-img-2x.jpg 2x
+                        ./images/desktop/prod4-desktop-img@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
                     />
@@ -315,7 +315,7 @@
                     <source
                       srcset="
                         ./images/desktop/prod5-desktop-img.jpg    1x,
-                        ./images/desktop/prod5-desktop-img-2x.jpg 2x
+                        ./images/desktop/prod5-desktop-img@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
                     />
@@ -362,7 +362,7 @@
                     <source
                       srcset="
                         ./images/desktop/prod6-desktop-img.jpg    1x,
-                        ./images/desktop/prod6-desktop-img-2x.jpg 2x
+                        ./images/desktop/prod6-desktop-img@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
                     />
@@ -411,7 +411,7 @@
                     <source
                       srcset="
                         ./images/desktop/prod7-desktop-img.jpg    1x,
-                        ./images/desktop/prod7-desktop-img-2x.jpg 2x
+                        ./images/desktop/prod7-desktop-img@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
                     />
@@ -460,7 +460,7 @@
                     <source
                       srcset="
                         ./images/desktop/prod8-desktop-img.jpg    1x,
-                        ./images/desktop/prod8-desktop-img-2x.jpg 2x
+                        ./images/desktop/prod8-desktop-img@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
                     />
@@ -507,7 +507,7 @@
                     <source
                       srcset="
                         ./images/desktop/prod9-desktop-img.jpg    1x,
-                        ./images/desktop/prod9-desktop-img-2x.jpg 2x
+                        ./images/desktop/prod9-desktop-img@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
                     />
