--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
                 <img
                   src="./images/mobile/inf1-mob-img.jpg "
                   alt="фотографія Ігор Дем'яненко"
-                  width="450px"
-                  height="460px"
+                  width="450"
+                  height="460"
                 />
               </picture>
               <!-- ================================================  -->
@@ -497,8 +497,8 @@
                 <img
                   src="./images/mobile/inf2-mob-img.jpg"
                   alt="фотографія Ольга Рєпіна"
-                  width="450px"
-                  height="460px"
+                  width="450"
+                  height="460"
                 />
               </picture>
               <!-- ================================================  -->
@@ -571,8 +571,8 @@
                 <img
                   src="./images/mobile/inf3-mob-img.jpg"
                   alt="фотографія Микола Тарасов"
-                  width="450px"
-                  height="460px"
+                  width="450"
+                  height="460"
                 />
               </picture>
               <!-- ================================================  -->
@@ -628,7 +628,7 @@
                   "
                   media="screen and  (min-width:1200px)"
                 />
-                <sourc4
+                <source
                   srcset="
                     ./images/tablet/inf4-tab-img.jpg    1x,
                     ./images/tablet/inf4-tab-img@2x.jpg 2x
@@ -645,8 +645,8 @@
                 <img
                   src="./images/mobile/inf4-mob-img.jpg"
                   alt="фотографія Михайло Єрмаков"
-                  width="450px"
-                  height="460px"
+                  width="450"
+                  height="460"
                 />
               </picture>
               <!-- ================================================  -->
