--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,10 @@
     <header class="header">
       <div class="container header__container">
         <nav class="header-nav">
-          <a href="./index.html" lang="en" class="header-link-log link"
+          <a
+            href="./index.html"
+            lang="en"
+            class="header-link-log link header-nav__header-link-log"
             ><span>Web</span>Studio</a
           >
 
@@ -43,7 +46,7 @@
               <a
                 href="./index.html"
                 rel="noopener noreferrer nofollow"
-                class="header-list__link link"
+                class="header-list__link link header-list__link_activ"
               >
                 Студія
               </a>
@@ -52,7 +55,7 @@
               <a
                 href="./portfolio.html"
                 rel="noopener noreferrer nofollow"
-                class="header-list__link link header-list__link_activ"
+                class="header-list__link link"
               >
                 Портфоліо
               </a>
@@ -92,6 +95,100 @@
             >
           </li>
         </ul>
+
+        <button
+          type="button"
+          class="header-menu-open header__menu-open"
+          data-menu-open
+        >
+          <!--<svg class="menu-open-icon"-->
+          <!--<span class="modal-open">-->
+          <svg class="modal-open-svg" width="40" height="40">
+            <use href="./images/icons.svg.svg#icon-menu_40px1"></use>
+          </svg>
+          <!--</span>-->
+        </button>
+      </div>
+      <div class="mobile-menu is-hidden" data-menu>
+        <div class="container mobile-menu-box">
+          <button
+            type="button"
+            class="header-menu-close header__menu-close"
+            data-menu-close
+          >
+            <!--<span class="modal-close">*/-->
+            <svg class="modal-close-svg" width="40px" height="40px">
+              <use href="./images/icons.svg.svg#icon-close_40px1"></use>
+            </svg>
+            <!--</span>-->
+          </button>
+          <nav class="menu-nav">
+            <ul class="menu-list list mobile-menu__menu-list">
+              <li class="menu-list__item">
+                <a
+                  href="./index.html"
+                  rel="noopener noreferrer nofollow"
+                  class="menu-list__link link"
+                >
+                  Студія
+                </a>
+              </li>
+              <li class="menu-list__item">
+                <a
+                  href="./portfolio.html"
+                  rel="noopener noreferrer nofollow"
+                  class="menu-list__link link menu-list__link_activ"
+                >
+                  Портфоліо
+                </a>
+              </li>
+              <li class="menu-list__item">
+                <a
+                  href=""
+                  rel="noopener noreferrer nofollow"
+                  class="menu-list__link link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="menu-list-com list mobile-menu__menu-list-com">
+            <li class="menu-list__item-com">
+              <a
+                href="tel:+380961111111"
+                class="menu-list__link-communication menu-list-link-tel link"
+              >
+                +38 096 111 11 11</a
+              >
+            </li>
+            <li class="menu-list__item-com">
+              <a
+                href="mailto:info@devstudio.com"
+                class="menu-list__link-communication menu-list-link-mail link"
+              >
+                info@devstudio.com
+              </a>
+            </li>
+          </ul>
+          <ul class="menu-soc-list list menu-list__menu-soc-list">
+            <li class="menu-soc-item">
+              <a href="" class="menu-soc-link link">Instagram</a>
+            </li>
+            <li class="menu-soc-list__soc-line"></li>
+            <li class="menu-soc-item">
+              <a href="" class="menu-soc-link link">Twitter</a>
+            </li>
+            <li class="menu-soc-list__soc-line"></li>
+            <li class="menu-soc-item">
+              <a href="" class="menu-soc-link link">Facebook</a>
+            </li>
+            <li class="menu-soc-list__soc-line"></li>
+            <li class="menu-soc-item">
+              <a href="" class="menu-soc-link link">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -129,11 +226,11 @@
                       "
                       media="screen and (min-width:1200px)"
                     />
-                    <sourc4
+                    <source
                       srcset="
-                    ./images/tablet/prod1-tab-img.jpg    1x,
-                    ./images/tablet/prod1-tab-img@2x.jpg 2x
-                  "
+                        ./images/tablet/prod1-tab-img.jpg    1x,
+                        ./images/tablet/prod1-tab-img@2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
@@ -176,11 +273,11 @@
                       "
                       media="(min-width:1200px)"
                     />
-                    <sourc4
+                    <source
                       srcset="
-                    ./images/tablet/prod2-tab-img.jpg    1x,
-                    ./images/tablet/prod2-tab-img@2x.jpg 2x
-                  "
+                        ./images/tablet/prod2-tab-img.jpg    1x,
+                        ./images/tablet/prod2-tab-img@2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
@@ -225,11 +322,11 @@
                       "
                       media="(min-width:1200px)"
                     />
-                    <sourc4
+                    <source
                       srcset="
-                    ./images/tablet/prod3-tab-img.jpg    1x,
-                    ./images/tablet/prod3-tab-img@2x.jpg 2x
-                  "
+                        ./images/tablet/prod3-tab-img.jpg    1x,
+                        ./images/tablet/prod3-tab-img@2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
@@ -272,11 +369,11 @@
                       "
                       media="(min-width:1200px)"
                     />
-                    <sourc4
+                    <source
                       srcset="
-                    ./images/tablet/prod4-tab-img.jpg    1x,
-                    ./images/tablet/prod4-tab-img@2x.jpg 2x
-                  "
+                        ./images/tablet/prod4-tab-img.jpg    1x,
+                        ./images/tablet/prod4-tab-img@2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
@@ -319,11 +416,11 @@
                       "
                       media="(min-width:1200px)"
                     />
-                    <sourc4
+                    <source
                       srcset="
-                    ./images/tablet/prod5-tab-img.jpg    1x,
-                    ./images/tablet/prod5-tab-img@2x.jpg 2x
-                  "
+                        ./images/tablet/prod5-tab-img.jpg    1x,
+                        ./images/tablet/prod5-tab-img@2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
@@ -366,11 +463,11 @@
                       "
                       media="(min-width:1200px)"
                     />
-                    <sourc4
+                    <source
                       srcset="
-                    ./images/tablet/prod6-tab-img.jpg    1x,
-                    ./images/tablet/prod6-tab-img@2x.jpg 2x
-                  "
+                        ./images/tablet/prod6-tab-img.jpg    1x,
+                        ./images/tablet/prod6-tab-img@2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
@@ -415,11 +512,11 @@
                       "
                       media="(min-width:1200px)"
                     />
-                    <sourc4
+                    <source
                       srcset="
-                    ./images/tablet/prod7-tab-img.jpg    1x,
-                    ./images/tablet/prod7-tab-img@2x.jpg 2x
-                  "
+                        ./images/tablet/prod7-tab-img.jpg    1x,
+                        ./images/tablet/prod7-tab-img@2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
@@ -464,11 +561,11 @@
                       "
                       media="(min-width:1200px)"
                     />
-                    <sourc4
+                    <source
                       srcset="
-                    ./images/tablet/prod8-tab-img.jpg    1x,
-                    ./images/tablet/prod8-tab-img@2x.jpg 2x
-                  "
+                        ./images/tablet/prod8-tab-img.jpg    1x,
+                        ./images/tablet/prod8-tab-img@2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
@@ -511,11 +608,11 @@
                       "
                       media="(min-width:1200px)"
                     />
-                    <sourc4
+                    <source
                       srcset="
-                    ./images/tablet/prod9-tab-img.jpg    1x,
-                    ./images/tablet/prod9-tab-img@2x.jpg 2x
-                  "
+                        ./images/tablet/prod9-tab-img.jpg    1x,
+                        ./images/tablet/prod9-tab-img@2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
@@ -653,5 +750,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
