updated footer portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -649,74 +649,78 @@
     </main>
     <footer class="footer">
       <div class="container footer__container">
-        <div class="footer__left-part">
-          <a
-            href="./index.html"
-            lang="en"
-            class="footer__link-log footer-log link"
-          >
-            <span>Web</span>Studio
-          </a>
+        <div class="footer-container-left-part-And-centr">
+          <div class="footer__left-part">
+            <a
+              href="./index.html"
+              lang="en"
+              class="footer__link-log footer-log link"
+            >
+              <span>Web</span>Studio
+            </a>
 
-          <address class="footer-address">
-            <!--<divclass="footer-addr"></div>-->
-            <ul class="footer-list list">
-              <li class="footer-list__item">
-                <a
-                  href="https://goo.gl/maps/Vcjv57qDKh7D1HHGA"
-                  class="footer-list__link-address link"
-                >
-                  г. Киев, пр-т Леси Украинки, 26
+            <address class="footer-address">
+              <!--<divclass="footer-addr"></div>-->
+              <ul class="footer-list list">
+                <li class="footer-list__item">
+                  <a
+                    href="https://goo.gl/maps/Vcjv57qDKh7D1HHGA"
+                    class="footer-list__link-address link"
+                  >
+                    г. Киев, пр-т Леси Украинки, 26
+                  </a>
+                </li>
+                <li class="footer-list__item">
+                  <a
+                    href="mailto:info@example.com"
+                    class="footer-list__link link"
+                  >
+                    info@example.com
+                  </a>
+                </li>
+                <li class="footer-list__item">
+                  <a href="tel:+380991111111" class="footer-list__link link">
+                    +38 099 111 11 11
+                  </a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer-soc footer__footer-soc">
+            <p class="footer-soc__text">Приєднуйтесь</p>
+            <ul class="footer-soc-list list">
+              <li class="footer-soc-list__item">
+                <a href="" class="footer-soc-list__link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use
+                      href="./images/icons.svg.svg#icon-icon-instagram"
+                    ></use>
+                  </svg>
                 </a>
               </li>
-              <li class="footer-list__item">
-                <a
-                  href="mailto:info@example.com"
-                  class="footer-list__link link"
-                >
-                  info@example.com
+              <li class="footer-soc-item">
+                <a href="" class="footer-soc-list__link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./images/icons.svg.svg#icon-icon-twitter"></use>
+                  </svg>
                 </a>
               </li>
-              <li class="footer-list__item">
-                <a href="tel:+380991111111" class="footer-list__link link">
-                  +38 099 111 11 11
+              <li class="footer-soc-item">
+                <a href="" class="footer-soc-list__link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./images/icons.svg.svg#icon-icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a href="" class="footer-soc-list__link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./images/icons.svg.svg#icon-icon-linkedin"></use>
+                  </svg>
                 </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer-soc footer__footer-soc">
-          <p class="footer-soc__text">Приєднуйтесь</p>
-          <ul class="footer-soc-list list">
-            <li class="footer-soc-list__item">
-              <a href="" class="footer-soc-list__link link">
-                <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/icons.svg.svg#icon-icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-list__link link">
-                <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/icons.svg.svg#icon-icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-list__link link">
-                <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/icons.svg.svg#icon-icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-list__link link">
-                <svg class="footer-soc-icon" width="20" height="20">
-                  <use href="./images/icons.svg.svg#icon-icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="footer-form">
           <p class="footer-form__title">Підпишиться на розсилку</p>
@@ -730,7 +734,7 @@
                 class="footer-form-input footer-form-label__mr"
               />
             </label>
-            <button type="submit" class="footer-btn">
+            <button type="submit" class="footer-btn footer-form-box__btn">
               Підписатися
               <span class="footer-icon-send footer-btn__icon">
                 <svg
